create detail page with all products and that's my frist Time

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="card">
           <img src="img/banner-01.jpg.webp" class="card-img-top" alt="...">
         </div>
-        <div class="card-body position-absolute top-0 mt-4 ms-5">
+        <div class="card-body position-absolute top-0  ms-5">
           <h3 class="card-text fw-bolder">Women</h3>
           <p class="fs-6 me-2">spring 2024</p>
         </div>
@@ -112,7 +112,7 @@
         <div class="card">
           <img src="img/banner-02.jpg.webp" class="card-img-top" alt="...">
         </div>
-        <div class="card-body position-absolute top-0 mt-4 ms-5">
+        <div class="card-body position-absolute top-0  ms-5">
           <h3 class="card-text fw-bolder">Men</h3>
           <p class="fs-6 me-2">spring 2024</p>
         </div>
@@ -120,7 +120,7 @@
           <button class="animated-btn">Shop Now</button>
         </div>
       </div>
-      <div class="col-lg-4 col-md-6 mt-md-3 position-relative hover-col">
+      <div class="col-lg-4 col-md-6  position-relative hover-col">
         <div class="card">
           <img src="img/banner-03.jpg.webp" class="card-img-top" alt="...">
         </div>
@@ -677,7 +677,7 @@
         </div>
 
         <div class="col-lg-3 col-md-6 mt-md-5">
-          <h5 class="text-uppercase ms-4 pb-4 footer-md">GET IN TOUCH</h5>
+          <h5 class="text-uppercase ms-4  footer-md">GET IN TOUCH</h5>
 
           <p class="footer-para">Any questions? Let us know in store at 8th floor, 379 Hudson St, New York, NY 10018 or call us on (+1) 96 716 6879</p>
           <div class="footer-svg">
@@ -694,7 +694,7 @@
           
         </div>
         <div class="col-lg-3 col-md-6 mt-md-5">
-          <h5 class="text-uppercase ms-4 pb-4  footer-md">Newsletter</h5>
+          <h5 class="text-uppercase ms-4  footer-md">Newsletter</h5>
           <div class="footer-email">
             <input type="email" placeholder="name@example.com">
             <button class="normal mt-3">SUBSCRIBE</button>
@@ -719,7 +719,7 @@
           </a>
         </div>
 
-            <div class="col-12 my-4 text-center">  
+            <div class="col-12 text-center">  
               <p>Copyright ©2024 All rights reserved | SKYWAY</p>
             </div>
       </div>
