--- a/detail.html
+++ b/detail.html
@@ -6,6 +6,13 @@
     <title>Product</title>
 </head>
 <body>
-    
+    <div class="container">
+        <img id="card-image" src="" alt="Product Image">
+        <p id="card-parah"></p>
+        <p id="card-price"></p>
+        <div id="card-description"></div>
+    </div>
+
+    <script src="js/detail.js"></script>
 </body>
 </html>
