--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="asessts/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
 
 <body>
@@ -38,10 +39,19 @@
             <a class="nav-link " href="#">Contact Us</a>
           </li>
         </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button type="button" class="normal">Submit</button>
-        </form>
+
+        <div class="nav-icons d-none d-sm-block me-5  ">
+          <i class="fa-solid fa-cart-shopping fs-5 me-3 position-relative ">
+            <span class="position-absolute top-0 start-100 translate-middle border border-light rounded-circle">
+              2
+            </span>
+          </i>
+          <i class="fa-regular fa-heart  fs-5 position-relative">
+            <span class="position-absolute top-0 start-100 translate-middle border border-light rounded-circle">
+              0
+            </span>
+          </i>
+        </div>
       </div>
     </div>
   </nav>
