--- a/detail.html
+++ b/detail.html
@@ -21,19 +21,19 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mx-auto mb-2 mb-lg-0 fw-bolder">
           <li class="nav-item">
-            <a class="nav-link active " aria-current="page" href="#">Home</a>
+            <a class="nav-link active " aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="#">Shop</a>
+            <a class="nav-link " href="shop.html">Shop</a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link  " href="#">About</a>
+            <a class="nav-link  " href="shop.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="#">Blog</a>
+            <a class="nav-link " href="blog.html">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="#">Contact Us</a>
+            <a class="nav-link " href="contact.html">Contact Us</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
