add designed about page

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>e-commerce</title>
+  <title>About</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/about.css">
@@ -57,12 +57,60 @@
     </div>
   </nav>
 
+    <!-- about-in  -->
   <section class="about-in ">
     <div class="about-image d-flex justify-content-center align-items-center">
         <h1>About</h1>
     </div>
   </section>
 
+    <!-- our-story  -->
+     <section class="about-story">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8">
+            <h2 class=" fw-bolder">Our Story</h2>
+            <p>Welcome to SkyWay your one-stop destination for [specific product category or service, e.g., "quality fashion," "home essentials," or "tech gadgets"].
+
+              At SkyWay, we're dedicated to bringing you the best shopping experience, offering carefully curated products that meet your needs and reflect the latest trends. Whether you're looking for [specific types of items, e.g., "stylish apparel," "unique gift items," or "high-tech gadgets"], we've got you covered.
+              Our mission is simple: to provide high-quality products at competitive prices, backed by exceptional customer service. We believe shopping should be enjoyable and stress-free, which is why we focus on convenience, security, and trust.</p>
+
+                <h5 class="fw-bolder my-3">Why Choose Us?</h5>
+
+                <ul class="story-list">
+                  <li><b>Wide Range of Products:</b><p> We offer a diverse selection to suit every style and preference.</p></li>
+                  <li><b>Customer First:</b> <p>Your satisfaction is our top priority.></p></li>
+                  <li><b>Secure Shopping:</b> <p>Shop with confidence, knowing your information is safe with us</p></li>
+                </ul>
+          </div>
+          <div class="col-lg-4">
+            <div class="how-pic">
+              <div class="how-image mx-5 my-3">
+                <img src="img/story-01.jpg" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row mt-5 ps-5">
+          <div class="col-lg-4">
+            <div class="how-pic">
+              <div class="how-image ">
+                <img src="img/story-2.jpg" alt="">
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-7 ms-5">
+            <h2 class=" fw-bolder mt-5">Our Mission</h2>
+            <p>Welcome to SkyWay your one-stop destination for [specific product category or service, e.g., "quality fashion," "home essentials," or "tech gadgets"].
+
+              At SkyWay, we're dedicated to bringing you the best shopping experience, offering carefully curated products that meet your needs and reflect the latest trends. Whether you're looking for [specific types of items, e.g., "stylish apparel," "unique gift items," or "high-tech gadgets"], we've got you covered.
+              Our mission is simple: to provide high-quality products at competitive prices, backed by exceptional customer service. We believe shopping should be enjoyable and stress-free, which is why we focus on convenience, security, and trust.</p>
+
+              <p class="mt-5 ps-5 para-store">Creativity is just connecting things. When you ask creative people how they did something, they feel a little guilty because they didn't really do it, they just saw something. It seemed obvious to them after a while.</p> 
+          </div>
+        </div>
+      </div>
+     </section>
 
     <!-- footer is start  -->
   <footer class="footer ">
