click a fav button to show a sidebar

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
               2
             </span>
           </i>
-          <i class="fa-regular fa-heart  fs-5 position-relative">
-            <span class="position-absolute top-0 start-100 translate-middle border border-light rounded-circle" id="main-fav-btn">
-              0
-            </span>
-          </i>
+         <a href="fav.html" class="text-dark"><i class="fa-regular fa-heart  fs-5 position-relative">
+          <span class="position-absolute top-0 start-100 translate-middle border border-light rounded-circle" id="main-fav-btn">
+            0
+          </span>
+        </i></a>
         </div>
       </div>
     </div>
